# qt-sample-opengl

./: .gitignore  .gitmodules  CMakeLists.txt  Learn6.cpp  Learn6_transform.cpp  README.md  Source2_sample_drawing_triangle_index.cpp  WindowCreator.cpp  WindowCreator.h  main.cpp
CMake1/: CMakeLists.txt
ext_lib/glew-2.2.0-mingw64/lib/pkgconfig/: glew.pc
ext_lib/glew-2.2.0-ubuntu/lib/: libGLEW.so.2.2.0
ext_lib/glew-2.2.0-ubuntu/lib/cmake/glew/: glew-targets.cmake
ext_lib/glew-2.2.0-ubuntu/lib/pkgconfig/: glew.pc
ext_lib/glew-2.2.0-v142/Win32/Debug/: glew32d.lib  libglew32d.lib
ext_lib/glew-2.2.0-v142/Win32/Release/: glew32.lib  libglew32.lib
ext_lib/glew-2.2.0-v142/x64/Debug/: libglew32d.lib
ext_lib/glew-2.2.0-v142/x64/Release/: libglew32.lib
ext_lib/glfw-3.3.4-mingw64/lib/pkgconfig/: glfw3.pc
ext_lib/glfw-3.3.4-ubuntu/lib/pkgconfig/: glfw3.pc
ext_lib/glfw-3.3.4-v142/Win32/Debug/: glfw3.lib
ext_lib/glfw-3.3.4-v142/Win32/Release/: glfw3.lib
ext_lib/glfw-3.3.4-v142/x64/Debug/: glfw3.lib
ext_lib/glfw-3.3.4-v142/x64/Release/: glfw3.lib
ext_lib/out-glew/lib/pkgconfig/: glew.pc
ext_lib/out-glfw/lib/pkgconfig/: glfw3.pc
learn/qt-opengl-learn1/: CMakeLists.txt  glrender.cpp  glrender.h  glrender_indices.cpp  glrender_indices.h  main.cpp  main_l1_ex2_2program.sample.cpp  main_l1_ex2_2vao.cpp  main_l1_refact.cpp
learn/qt-opengl-learn1-triangle/: CMakeLists.txt  glrender.h  glrender_indices.cpp  glrender_indices.h  main.cpp  main_l1.cpp  main_l1_ex2_2vao.sample.cpp  main_l1_ex3_2shader_program.cpp  main_l1_ex_indices.cpp  main_l1_refact.cpp
learn/qt-opengl-learn2/: main_l2.cpp
learn/qt-opengl-learn2-shader/: CMakeLists.txt  main.cpp  main_l2.cpp  main_l2_shader_wrapper.cpp  shaderwrapper.cpp  shaderwrapper.h
learn/qt-opengl-learn3-texture/: CMakeLists.txt  common.cpp  common.h  main.cpp  main_l3.cpp  main_l3_1renderer_NtextureS_optimize_performance.cpp  main_l3_1renderer_optimize_performance.cpp  main_l3_1renderer_performance.cpp  texturebase.cpp  texturebase.h  texturewall.cpp  texturewall.h
learn2/: .gitignore
learn2/01/cmake/: CMakeLists.txt
learn2/01/src/: main.cpp
moving-game/: CMakeLists.txt  common.cpp  common.h  gamecontroller.cpp  gamecontroller.h  gamemanager.cpp  gamemanager.h  gamemodel.cpp  gamemodel.h  gamerender.cpp  gamerender.h  main.cpp
